test/functions/resolution/ignore-unreachable.good
ignore-unreachable.chpl:28: warning: int(64)
hi
3.5
bye
in t1
in t1
7755
in t2
ignore-unreachable.chpl:67: error: halt reached - in main
